# dbt-yaml-guardrails

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  HOOKS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01_bug_report.md  02_feature_or_spec.md  config.yml
.github/workflows/: ci.yml  release.yml
specs/: README.md  hooks.md  project-spec.md  resource-config-keys.md  resource-keys.md  scope.md  testing-strategy.md  yaml-handling.md
specs/hook-families/: allowed-column-keys.md  allowed-config-keys.md  allowed-keys.md  allowed-meta-keys.md  config-meta-keys.md  dbt-yaml-legacy.md  fix-legacy-yaml.md  meta-accepted-values.md  meta-keys-accepted-values.md  tags-accepted-values.md
src/dbt_yaml_guardrails/: __init__.py  allowed_keys_core.py  exposure_allowed_keys.py  macro_allowed_keys.py  model_allowed_keys.py  resource_keys.py  seed_allowed_keys.py  snapshot_allowed_keys.py  yaml_handling.py
src/dbt_yaml_guardrails/hook_families/: __init__.py
src/dbt_yaml_guardrails/hook_families/allowed_column_keys/: allowed_column_keys_core.py  model_allowed_column_keys.py  seed_allowed_column_keys.py  snapshot_allowed_column_keys.py
src/dbt_yaml_guardrails/hook_families/allowed_config_keys/: __init__.py  allowed_config_keys_core.py  exposure_allowed_config_keys.py  macro_allowed_config_keys.py  model_allowed_config_keys.py  resource_config_keys.py  seed_allowed_config_keys.py  snapshot_allowed_config_keys.py  source_allowed_config_keys.py
src/dbt_yaml_guardrails/hook_families/allowed_keys/: __init__.py  allowed_keys_core.py  catalog_allowed_keys.py  dbt_project_allowed_keys.py  exposure_allowed_keys.py  macro_allowed_keys.py  model_allowed_keys.py  resource_keys.py  seed_allowed_keys.py  snapshot_allowed_keys.py  source_allowed_keys.py
src/dbt_yaml_guardrails/hook_families/allowed_meta_keys/: __init__.py  allowed_meta_keys_core.py  exposure_allowed_meta_keys.py  macro_allowed_meta_keys.py  model_allowed_meta_keys.py  seed_allowed_meta_keys.py  snapshot_allowed_meta_keys.py  source_allowed_meta_keys.py
src/dbt_yaml_guardrails/hook_families/dbt_yaml_legacy/: __init__.py  dbt_yaml_legacy.py  legacy_rewrite_core.py
src/dbt_yaml_guardrails/hook_families/fix_legacy_yaml/: __init__.py  fix_legacy_integration.py  fix_legacy_yaml.py  legacy_rewrite_core.py
src/dbt_yaml_guardrails/hook_families/meta_accepted_values/: __init__.py  exposure_meta_accepted_values.py  macro_meta_accepted_values.py  meta_accepted_values_core.py  model_meta_accepted_values.py  seed_meta_accepted_values.py  snapshot_meta_accepted_values.py  source_meta_accepted_values.py
src/dbt_yaml_guardrails/hook_families/tags_accepted_values/: __init__.py  exposure_tags_accepted_values.py  macro_tags_accepted_values.py  model_tags_accepted_values.py  seed_tags_accepted_values.py  snapshot_tags_accepted_values.py  source_tags_accepted_values.py  tags_accepted_values_core.py
tests/: test_allowed_keys_core.py  test_exposure_allowed_keys.py  test_macro_allowed_keys.py  test_model_allowed_keys.py  test_seed_allowed_keys.py  test_snapshot_allowed_keys.py  test_yaml_handling.py
tests/fixtures/yaml/: bad_version.yml  duplicate_keys.yml  exposures_config_only.yml  exposures_disallowed_key.yml  exposures_name_only.yml  invalid_syntax.yml  macros_config_only.yml  macros_duplicate_name.yml  macros_two.yml  macros_with_legacy_meta.yml  models_disallowed_key.yml  models_missing_name.yml  models_name_only.yml  seeds_name_only.yml  seeds_two.yml  snapshots_config_only.yml  snapshots_disallowed_key.yml  snapshots_empty.yml  snapshots_name_only.yml  snapshots_two.yml
tests/fixtures/yaml/dbt_yaml_legacy/: model_both_keys.yml  model_column_tests.yml  model_tests_top.yml
tests/fixtures/yaml/fix_legacy_yaml/: model_column_tests_conflict_both_keys.yml  model_v2_config_null_with_tags.yml  model_v2_tags_top_and_config.yml  model_v2_top_level_meta_into_config.yml  model_v2_top_level_tags_only.yml  source_v1_column_tests_only.yml  source_v1_table_both_keys.yml  source_v1_table_tests_only.yml
tests/fixtures/yaml/shared/: sources_only.yml  version_string_two.yml
tests/hook_families/allowed_column_keys/: test_model_allowed_column_keys.py  test_seed_allowed_column_keys.py  test_snapshot_allowed_column_keys.py
tests/hook_families/allowed_config_keys/: test_allowed_config_keys_core.py  test_exposure_allowed_config_keys.py  test_macro_allowed_config_keys.py  test_model_allowed_config_keys.py  test_seed_allowed_config_keys.py  test_snapshot_allowed_config_keys.py  test_source_allowed_config_keys.py
tests/hook_families/allowed_keys/: test_allowed_keys_core.py  test_allowed_keys_core_extended.py  test_catalog_allowed_keys.py  test_dbt_project_allowed_keys.py  test_exposure_allowed_keys.py  test_macro_allowed_keys.py  test_model_allowed_keys.py  test_seed_allowed_keys.py  test_snapshot_allowed_keys.py  test_source_allowed_keys.py
tests/hook_families/allowed_meta_keys/: test_allowed_meta_keys_core.py  test_exposure_allowed_meta_keys.py  test_macro_allowed_meta_keys.py  test_model_allowed_meta_keys.py  test_resource_allowed_meta_keys.py  test_seed_allowed_meta_keys.py  test_snapshot_allowed_meta_keys.py  test_source_allowed_meta_keys.py
tests/hook_families/dbt_yaml_legacy/: __init__.py  test_dbt_yaml_legacy.py
tests/hook_families/fix_legacy_yaml/: __init__.py  test_fix_legacy_yaml.py  test_legacy_rewrite_core.py
tests/hook_families/meta_accepted_values/: test_exposure_meta_accepted_values.py  test_macro_meta_accepted_values.py  test_model_meta_accepted_values.py  test_seed_meta_accepted_values.py  test_snapshot_meta_accepted_values.py  test_source_meta_accepted_values.py
tests/hook_families/tags_accepted_values/: test_exposure_tags_accepted_values.py  test_macro_tags_accepted_values.py  test_model_tags_accepted_values.py  test_seed_tags_accepted_values.py  test_snapshot_tags_accepted_values.py  test_source_tags_accepted_values.py
tests/hook_sandbox/: .pre-commit-sandbox.yaml  dbt_project.yml  sandbox.yml
(+159 files in other folders)
