[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "dbt-yaml-guardrails"
version = "0.1.0"
description = "Pre-commit hooks for configurable standards on dbt property YAML (Fusion-oriented)."
readme = "README.md"
authors = [
    { name = "Alexander Sutcliffe" },
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "ruamel.yaml>=0.18",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.urls]
Homepage = "https://github.com/scrambldchannel/dbt-yaml-guardrails"
Repository = "https://github.com/scrambldchannel/dbt-yaml-guardrails"
Issues = "https://github.com/scrambldchannel/dbt-yaml-guardrails/issues"

[project.scripts]
model-allowed-keys = "dbt_yaml_guardrails.hook_families.allowed_keys.model_allowed_keys:cli_main"
macro-allowed-keys = "dbt_yaml_guardrails.hook_families.allowed_keys.macro_allowed_keys:cli_main"
seed-allowed-keys = "dbt_yaml_guardrails.hook_families.allowed_keys.seed_allowed_keys:cli_main"
snapshot-allowed-keys = "dbt_yaml_guardrails.hook_families.allowed_keys.snapshot_allowed_keys:cli_main"
exposure-allowed-keys = "dbt_yaml_guardrails.hook_families.allowed_keys.exposure_allowed_keys:cli_main"
model-allowed-meta-keys = "dbt_yaml_guardrails.hook_families.allowed_meta_keys.model_allowed_meta_keys:cli_main"
seed-allowed-meta-keys = "dbt_yaml_guardrails.hook_families.allowed_meta_keys.seed_allowed_meta_keys:cli_main"
snapshot-allowed-meta-keys = "dbt_yaml_guardrails.hook_families.allowed_meta_keys.snapshot_allowed_meta_keys:cli_main"
exposure-allowed-meta-keys = "dbt_yaml_guardrails.hook_families.allowed_meta_keys.exposure_allowed_meta_keys:cli_main"
macro-allowed-meta-keys = "dbt_yaml_guardrails.hook_families.allowed_meta_keys.macro_allowed_meta_keys:cli_main"

[tool.hatch.build.targets.wheel]
packages = ["src/dbt_yaml_guardrails"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
