[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "dbt-yaml-guardrails"
version = "0.4.4"
description = "Pre-commit hooks for configurable standards on dbt property YAML (Fusion-oriented)."
readme = "README.md"
keywords = [
    "dbt",
    "dbt-fusion",
    "yaml",
    "pre-commit",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Build Tools",
]
authors = [
    { name = "Alexander Sutcliffe" },
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "ruamel.yaml>=0.18",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.urls]
Homepage = "https://github.com/scrambldchannel/dbt-yaml-guardrails"
Repository = "https://github.com/scrambldchannel/dbt-yaml-guardrails"
Issues = "https://github.com/scrambldchannel/dbt-yaml-guardrails/issues"

[project.scripts]
model-allowed-keys = "dbt_yaml_guardrails.hook_families.allowed_keys.model_allowed_keys:cli_main"
model-allowed-config-keys = "dbt_yaml_guardrails.hook_families.allowed_config_keys.model_allowed_config_keys:cli_main"
model-allowed-column-keys = "dbt_yaml_guardrails.hook_families.allowed_column_keys.model_allowed_column_keys:cli_main"
seed-allowed-column-keys = "dbt_yaml_guardrails.hook_families.allowed_column_keys.seed_allowed_column_keys:cli_main"
snapshot-allowed-column-keys = "dbt_yaml_guardrails.hook_families.allowed_column_keys.snapshot_allowed_column_keys:cli_main"
macro-allowed-config-keys = "dbt_yaml_guardrails.hook_families.allowed_config_keys.macro_allowed_config_keys:cli_main"
seed-allowed-config-keys = "dbt_yaml_guardrails.hook_families.allowed_config_keys.seed_allowed_config_keys:cli_main"
source-allowed-config-keys = "dbt_yaml_guardrails.hook_families.allowed_config_keys.source_allowed_config_keys:cli_main"
snapshot-allowed-config-keys = "dbt_yaml_guardrails.hook_families.allowed_config_keys.snapshot_allowed_config_keys:cli_main"
exposure-allowed-config-keys = "dbt_yaml_guardrails.hook_families.allowed_config_keys.exposure_allowed_config_keys:cli_main"
macro-allowed-keys = "dbt_yaml_guardrails.hook_families.allowed_keys.macro_allowed_keys:cli_main"
seed-allowed-keys = "dbt_yaml_guardrails.hook_families.allowed_keys.seed_allowed_keys:cli_main"
source-allowed-keys = "dbt_yaml_guardrails.hook_families.allowed_keys.source_allowed_keys:cli_main"
snapshot-allowed-keys = "dbt_yaml_guardrails.hook_families.allowed_keys.snapshot_allowed_keys:cli_main"
exposure-allowed-keys = "dbt_yaml_guardrails.hook_families.allowed_keys.exposure_allowed_keys:cli_main"
catalog-allowed-keys = "dbt_yaml_guardrails.hook_families.allowed_keys.catalog_allowed_keys:cli_main"
dbt-project-allowed-keys = "dbt_yaml_guardrails.hook_families.allowed_keys.dbt_project_allowed_keys:cli_main"
model-allowed-meta-keys = "dbt_yaml_guardrails.hook_families.allowed_meta_keys.model_allowed_meta_keys:cli_main"
seed-allowed-meta-keys = "dbt_yaml_guardrails.hook_families.allowed_meta_keys.seed_allowed_meta_keys:cli_main"
snapshot-allowed-meta-keys = "dbt_yaml_guardrails.hook_families.allowed_meta_keys.snapshot_allowed_meta_keys:cli_main"
exposure-allowed-meta-keys = "dbt_yaml_guardrails.hook_families.allowed_meta_keys.exposure_allowed_meta_keys:cli_main"
source-allowed-meta-keys = "dbt_yaml_guardrails.hook_families.allowed_meta_keys.source_allowed_meta_keys:cli_main"
macro-allowed-meta-keys = "dbt_yaml_guardrails.hook_families.allowed_meta_keys.macro_allowed_meta_keys:cli_main"
model-meta-accepted-values = "dbt_yaml_guardrails.hook_families.meta_accepted_values.model_meta_accepted_values:cli_main"
seed-meta-accepted-values = "dbt_yaml_guardrails.hook_families.meta_accepted_values.seed_meta_accepted_values:cli_main"
snapshot-meta-accepted-values = "dbt_yaml_guardrails.hook_families.meta_accepted_values.snapshot_meta_accepted_values:cli_main"
exposure-meta-accepted-values = "dbt_yaml_guardrails.hook_families.meta_accepted_values.exposure_meta_accepted_values:cli_main"
source-meta-accepted-values = "dbt_yaml_guardrails.hook_families.meta_accepted_values.source_meta_accepted_values:cli_main"
macro-meta-accepted-values = "dbt_yaml_guardrails.hook_families.meta_accepted_values.macro_meta_accepted_values:cli_main"
model-tags-accepted-values = "dbt_yaml_guardrails.hook_families.tags_accepted_values.model_tags_accepted_values:cli_main"
seed-tags-accepted-values = "dbt_yaml_guardrails.hook_families.tags_accepted_values.seed_tags_accepted_values:cli_main"
snapshot-tags-accepted-values = "dbt_yaml_guardrails.hook_families.tags_accepted_values.snapshot_tags_accepted_values:cli_main"
exposure-tags-accepted-values = "dbt_yaml_guardrails.hook_families.tags_accepted_values.exposure_tags_accepted_values:cli_main"
source-tags-accepted-values = "dbt_yaml_guardrails.hook_families.tags_accepted_values.source_tags_accepted_values:cli_main"
macro-tags-accepted-values = "dbt_yaml_guardrails.hook_families.tags_accepted_values.macro_tags_accepted_values:cli_main"

[tool.hatch.build.targets.wheel]
packages = ["src/dbt_yaml_guardrails"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
